Minor edits: added zero padding referenced matlab added in references made table for detecting single peaks

--- a/references.bib
+++ b/references.bib
@@ -658,7 +658,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	abstract = {Transformation of mechanical energy into ionic currents is essential for touch, hearing and nociception. Although {DEG/ENaC} proteins are believed to form sensory mechanotransduction channels, the evidence for this role remains indirect. By recording from C. elegans touch receptor neurons in vivo, we found that external force evokes rapidly activating mechanoreceptor currents {(MRCs)} carried mostly by Na(+) and blocked by amiloride-characteristics consistent with direct mechanical gating of a {DEG/ENaC} channel. Like mammalian Pacinian corpuscles, these neurons depolarized with both positive and negative changes in external force but not with sustained force. Null mutations in the {DEG/ENaC} gene mec-4 and in the accessory ion channel subunit genes mec-2 and mec-6 eliminated {MRCs.} In contrast, the genetic elimination of touch neuron-specific microtubules reduced, but did not abolish, {MRCs.} Our findings link the application of external force to the activation of a molecularly defined metazoan sensory transduction channel.},
 	number = {1},
 	journal = {Nature Neuroscience},
-	author = {O'hagan, Robert and Chalfie, Martin and Goodman, Miriam B},
+	author = {{O'Hagan}, Robert and Chalfie, Martin and Goodman, Miriam B},
 	month = jan,
 	year = {2005},
 	note = {{PMID:} 15580270},
@@ -864,7 +864,7 @@ For studying the function of specific neurons in their native circuitry, it is d
 	title = {The neural circuit for touch sensitivity in Caenorhabditis elegans},
 	volume = {5},
 	issn = {0270-6474},
-	url = {http://www.ncbi.nlm.nih.gov.ezp-prod1.hul.harvard.edu/pubmed/3981252},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/3981252},
 	abstract = {The neural pathways for touch-induced movement in Caenorhabditis elegans contain six touch receptors, five pairs of interneurons, and 69 motor neurons. The synaptic relationships among these cells have been deduced from reconstructions from serial section electron micrographs, and the roles of the cells were assessed by examining the behavior of animals after selective killing of precursors of the cells by laser microsurgery. This analysis revealed that there are two pathways for touch-mediated movement for anterior touch (through the {AVD} and {AVB} interneurons) and a single pathway for posterior touch (via the {PVC} interneurons). The anterior touch circuitry changes in two ways as the animal matures. First, there is the formation of a neural network of touch cells as the three anterior touch cells become coupled by gap junctions. Second, there is the addition of the {AVB} pathway to the pre-existing {AVD} pathway. The touch cells also synapse onto many cells that are probably not involved in the generation of movement. Such synapses suggest that stimulation of these receptors may modify a number of behaviors.},
 	number = {4},
 	journal = {The Journal of Neuroscience: The Official Journal of the Society for Neuroscience},
@@ -1041,7 +1041,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	booktitle = {Wormbook},
 	publisher = {{WormBook}},
 	author = {Mango, Susan E.},
-	editor = {The C. elegans Research Community},
+	editor = {The C. Elegans Research Community},
 	month = jan,
 	year = {2007}
 },
@@ -1222,6 +1222,15 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	note = {{PMID:} 3981252},
 	keywords = {Animals, Caenorhabditis, Interneurons, Lasers, Mechanoreceptors, Motor Neurons, Movement, Muscle Contraction, Nervous System Physiology, Neural Pathways, Synapses, Touch},
 	pages = {956--64}
+},
+
+@book{reif_fundamentals_1965,
+	address = {New York,},
+	series = {{McGraw-Hill} series in fundamentals of physics},
+	title = {Fundamentals of statistical and thermal physics},
+	publisher = {{McGraw-Hill}},
+	author = {Reif, F.},
+	year = {1965}
 },
 
 @misc{_setting_????,
@@ -1473,6 +1482,13 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	note = {{PMID:} 16572173},
 	keywords = {Animals, Caenorhabditis elegans, Caenorhabditis elegans Proteins, Calcium, Dopamine, Locomotion, Mechanoreceptors, Mechanotransduction, Cellular, Mutation, Neurons, Phenotype, {TRPC} Cation Channels},
 	pages = {684--687}
+},
+
+@book{matlab_version_2010,
+	title = {Version 7.11.0 {(R2010b)}},
+	publisher = {The {MathWorks} Inc.},
+	author = {{MATLAB}},
+	year = {2010}
 },
 
 @article{schafer_mechanism_1996,
@@ -1793,6 +1809,23 @@ are driven and organized by proprioceptive coupling},
 	pages = {e198}
 },
 
+@article{briggman_optical_2005-1,
+	title = {Optical imaging of neuronal populations during decision-making},
+	volume = {307},
+	issn = {1095-9203},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/15705844},
+	doi = {10.1126/science.1103736},
+	abstract = {We investigated decision-making in the leech nervous system by stimulating identical sensory inputs that sometimes elicit crawling and other times swimming. Neuronal populations were monitored with voltage-sensitive dyes after each stimulus. By quantifying the discrimination time of each neuron, we found single neurons that discriminate before the two behaviors are evident. We used principal component analysis and linear discriminant analysis to find populations of neurons that discriminated earlier than any single neuron. The analysis highlighted the neuron cell 208. Hyperpolarizing cell 208 during a stimulus biases the leech to swim; depolarizing it biases the leech to crawl or to delay swimming.},
+	number = {5711},
+	journal = {Science {(New} York, {N.Y.)}},
+	author = {Briggman, K L and Abarbanel, H D I and Kristan, W B, Jr},
+	month = feb,
+	year = {2005},
+	note = {{PMID:} 15705844},
+	keywords = {Analysis of Variance, Animals, Central Nervous System, Coloring Agents, Decision Making, Discriminant Analysis, Electric Stimulation, Fluorescence Resonance Energy Transfer, Ganglia, Invertebrate, Interneurons, Leeches, Locomotion, Membrane Potentials, Microelectrodes, Motor Neurons, Neurons, Principal Component Analysis, Swimming},
+	pages = {896--901}
+},
+
 @article{ben_arous_automated_2010,
 	title = {Automated imaging of neuronal activity in freely behaving Caenorhabditis elegans},
 	volume = {187},
@@ -1918,7 +1951,7 @@ When placed in open, liquid-filled, microfluidic chambers containing a square ar
 These results show that the microstructure can be used as a behavioral screen for mechanosensory and uncoordinated mutants. It is likely that worms use mechanosensation in the movement and navigation through heterogeneous environments.},
 	number = {6},
 	journal = {{PLoS} {ONE}},
-	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martínez, Fernando and Austin, Robert H. and Ryu, William S.},
+	author = {Park, Sungsu and Hwang, Hyejin and Nam, {Seong-Won} and Martinez, Fernando and Austin, Robert H. and Ryu, William S.},
 	year = {2008},
 	note = {{PMC2430527}},
 	keywords = {Caenorhabditis elegans, Locomotion, pdms, Touch},
@@ -2166,7 +2199,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {319--321}
 },
 
-@article{briggman_optical_2005-1,
+@article{briggman_optical_2005-2,
 	title = {Optical imaging of neuronal populations during decision-making},
 	volume = {307},
 	issn = {1095-9203},
@@ -2303,6 +2336,17 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 12618846},
 	keywords = {Animals, Antibodies, Antigens, Biosensing Techniques, Cattle, Crystallization, Fluorescence, Goats, Immunoassay, Membranes, Artificial, Molecular Probes, Porosity, Rabbits, Rats, Serum Albumin, Silicon Compounds},
 	pages = {39--41}
+},
+
+@book{oppenheim_digital_1975,
+	address = {Englewood Cliffs, {N.J}},
+	title = {Digital Signal Processing},
+	isbn = {0132146355},
+	lccn = {{TK5102.5} {.O245}},
+	publisher = {{Prentice-Hall}},
+	author = {Oppenheim, Alan V and Schafer, Ronald W},
+	year = {1975},
+	keywords = {Digital electronics, Signal theory {(Telecommunication)}}
 },
 
 @article{andersen_self-assembly_2009,
@@ -2567,7 +2611,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	month = mar,
 	year = {2009},
 	note = {{PMID:} 19198595},
-	keywords = {Carbocyanines, Chromosomes, Human, Pair 17, Chromosomes, Human, Pair 7, Chromosomes, Human, Pair 8, {DNA}, {DNA} Primers, {DNA}, {Single-Stranded}, {DNA-Directed} {DNA} Polymerase, Exodeoxyribonucleases, Genetic Techniques, Haplotypes, Heterozygote, Homozygote, Humans, Microscopy, Fluorescence, Polymerase Chain Reaction, Polymorphism, Single Nucleotide, Sequence Analysis, {DNA}, Staining and Labeling, Tissue Plasminogen Activator},
+	keywords = {Carbocyanines, Chromosomes, Human, Pair 17, Chromosomes, Human, Pair 7, Chromosomes, Human, Pair 8, {DNA}, {DNA} Primers, {DNA-Directed} {DNA} Polymerase, {DNA}, {Single-Stranded}, Exodeoxyribonucleases, Genetic Techniques, Haplotypes, Heterozygote, Homozygote, Humans, Microscopy, Fluorescence, Polymerase Chain Reaction, Polymorphism, Single Nucleotide, Sequence Analysis, {DNA}, Staining and Labeling, Tissue Plasminogen Activator},
 	pages = {199--201}
 },
 
@@ -2838,6 +2882,19 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {159}
 },
 
+@book{helstrom_statistical_1968,
+	address = {Oxford, New York},
+	edition = {2d ed., rev. and enl},
+	series = {International series of monographs in electronics and instrumentation, v. 9},
+	title = {Statistical Theory of Signal Detection},
+	isbn = {0080132650},
+	lccn = {{TK5101} {.H39} 1968},
+	publisher = {Pergamon Press},
+	author = {Helstrom, Carl W},
+	year = {1968},
+	keywords = {Signal detection, Statistical communication theory}
+},
+
 @article{lis_size_1975,
 	title = {Size fractionation of double-stranded {DNA} by precipitation with polyethylene glycol},
 	volume = {2},
@@ -2852,6 +2909,14 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 236548},
 	keywords = {Cations, Divalent, Coliphages, Deoxyribonucleases, {DNA} Viruses, {DNA}, Viral, Electrophoresis, Polyacrylamide Gel, Endonucleases, Haemophilus influenzae, {Hydrogen-Ion} Concentration, Methods, Molecular Weight, Osmolar Concentration, Polyethylene Glycols, Sodium Chloride, Time Factors, Ultracentrifugation},
 	pages = {383--389}
+},
+
+@book{wainstein_extraction_1962,
+	address = {Englewood Cliffs, N. J.,},
+	title = {Extraction of signals from noise},
+	publisher = {{Prentice-Hall}},
+	author = {Wainstein, L. A and Zubakov, V. D},
+	year = {1962}
 },
 
 @book{bradski_learning_2008,
@@ -3753,7 +3818,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 	title = {Optical interrogation of neural circuits in Caenorhabditis elegans},
 	volume = {advance online publication},
 	issn = {1548-7105},
-	url = {http://dx.doi.org.ezp-prod1.hul.harvard.edu/10.1038/nmeth.1397},
+	url = {http://dx.doi.org/10.1038/nmeth.1397},
 	doi = {10.1038/nmeth.1397},
 	journal = {Nat Meth},
 	author = {Guo, Zengcai V and Hart, Anne C and Ramanathan, Sharad},
