--- a/references.bib
+++ b/references.bib
@@ -2321,6 +2321,16 @@ These results show that the microstructure can be used as a behavioral screen fo
 	pages = {383--396}
 },
 
+@book{bretthorst_probability_2003,
+	address = {Cambridge, {UK} ;},
+	title = {Probability theory : the logic of science},
+	isbn = {0521592712 (hardback)},
+	shorttitle = {Probability theory},
+	publisher = {Cambridge University Press},
+	author = {Bretthorst, G. Larry and Jaynes, E. T},
+	year = {2003}
+},
+
 @article{cunin_biomolecular_2002,
 	title = {Biomolecular screening with encoded porous-silicon photonic crystals},
 	volume = {1},
