--- a/references.bib
+++ b/references.bib
@@ -1225,7 +1225,7 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 },
 
 @book{reif_fundamentals_1965,
-	address = {New York,},
+	address = {New York},
 	series = {{McGraw-Hill} series in fundamentals of physics},
 	title = {Fundamentals of statistical and thermal physics},
 	publisher = {{McGraw-Hill}},
@@ -2322,12 +2322,13 @@ These results show that the microstructure can be used as a behavioral screen fo
 },
 
 @book{bretthorst_probability_2003,
-	address = {Cambridge, {UK} ;},
+	address = {Cambridge, {UK}},
 	title = {Probability theory : the logic of science},
 	isbn = {0521592712 (hardback)},
 	shorttitle = {Probability theory},
 	publisher = {Cambridge University Press},
-	author = {Bretthorst, G. Larry and Jaynes, E. T},
+	author = {Jaynes, E. T},
+	editor = {Bretthorst, G. Larry},
 	year = {2003}
 },
 
@@ -2922,7 +2923,7 @@ These results show that the microstructure can be used as a behavioral screen fo
 },
 
 @book{wainstein_extraction_1962,
-	address = {Englewood Cliffs, N. J.,},
+	address = {Englewood Cliffs, N. J.},
 	title = {Extraction of signals from noise},
 	publisher = {{Prentice-Hall}},
 	author = {Wainstein, L. A and Zubakov, V. D},
