lots of updates to acknowledgements, references, etc.. still working on introduction

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,8 +1,16 @@
 % the acknowledgments section
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit. Nulla facilisi. Nulla libero. Vivamus pharetra posuere sapien. Nam consectetuer. Sed aliquam, nunc eget euismod ullamcorper, lectus nunc ullamcorper orci, fermentum bibendum enim nibh eget ipsum. Donec porttitor ligula eu dolor. Maecenas vitae nulla consequat libero cursus venenatis. Nam magna enim, accumsan eu, blandit sed, blandit a, eros.
+This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks first and foremost to my advisor Aravinthan Samuel. Aravi took me into his laboratory as a refugee from another lab. I could not have asked for a more supportive advisor. 
 
-This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks to my parents Anne and Mark for their encouragmenet. To Professor Jim Hogle and Michele Jakoulov of the Program in Biophysics at Harvard. 
+Aravi provided me intellectual freedom and wonderful environment to explore and build.
+
+Taught me the importance of being a respectful and humble colleague and collaborator. 
+
+
+
+
+
+Thanks to my parents Anne and Mark for their encouragmenet. To Professor Jim Hogle and Michele Jakoulov of the Program in Biophysics at Harvard. 
 
 This dissertation is based upon work supported by the National Science Foundation Graduate Research Fellowship under Grant No. DGE-0644491.
 
@@ -28,8 +36,14 @@ Collaborators:
    Chris Clark, Mark Alkema
    Adam Bahrami, Michael Hendriks in Yun Zhang lab
    Ed Boyden
+
+Chenxiang, William Shih.
    
-Ben Schwarts for many fruitful discussions.
+
+Markus Meister who initiall introduced me to neuroscience. 
+Ashley Carter and Tom Perkins for mentoring me and introducing me to academic research. 
+
+Ben Schwarts and Alex Fields for many fruitful discussions.
 
 Dissertation Advisary Committee Members:
    Adam Cohen
@@ -43,5 +57,7 @@ Thesis Committee:
 	Florian Engert
 
 Franziska Graf.
+
+Some nematode strains used in this work were provided by the Caenorhabditis Genetics Center, which is funded by the NIH National Center for Research Resources (NCRR).
 
 Typeset with \XeTeX using a modified version of Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
