--- a/frontmatter/coverpage.tex
+++ b/frontmatter/coverpage.tex
@@ -1,5 +1,5 @@
 % some details about the thesis
-\title{Optogenetics and image processing for \textit{C. elegans} neuroscience and other biophysical applications}
+\title{Optogenetics and computer vision for \textit{C. elegans} neuroscience and other biophysical applications}
 \author{Andrew Michael Leifer}
 \advisor{Aravinthan D. T. Samuel}
 
