draft of intro done

--- a/references.bib
+++ b/references.bib
@@ -1406,6 +1406,22 @@ The ability to stimulate select neurons in isolated tissue and in living animals
 	pages = {925--929}
 },
 
+@article{friesen_sensory_2001,
+	title = {Sensory and central mechanisms control intersegmental coordination},
+	volume = {11},
+	issn = {0959-4388},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/11741017},
+	abstract = {Recent experiments on the sensory and central mechanisms that coordinate animal locomotory movements have advanced our understanding of the relative importance of these two components and overturned some previously held notions. In different experimental preparations, sensory inputs and central pattern generators have now been shown to play different roles in setting intersegmental phase lags.},
+	number = {6},
+	journal = {Current Opinion in Neurobiology},
+	author = {Friesen, W O and Cang, J},
+	month = dec,
+	year = {2001},
+	note = {{PMID:} 11741017},
+	keywords = {Animals, Central Nervous System, Humans, Locomotion, Models, Neurological, Neurons, Afferent},
+	pages = {678--683}
+},
+
 @article{douglas_dna-nanotube-induced_2007,
 	title = {{DNA-nanotube-induced} alignment of membrane proteins for {NMR} structure determination},
 	volume = {104},
