added a bunch of notes and things based on my conversation with dad

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -7,7 +7,7 @@ Aravi provided me intellectual freedom and wonderful environment to explore and 
 Taught me the importance of being a respectful and humble colleague and collaborator. 
 
 
-
+Mark Leifer, Camille Rickets helped with editing. 
 
 
 Thanks to my parents Anne and Mark for their encouragmenet. To Professor Jim Hogle and Michele Jakoulov of the Program in Biophysics at Harvard. 
