--- a/references.bib
+++ b/references.bib
@@ -541,6 +541,16 @@ For studying the function of specific neurons in their native circuitry, it is d
 	url = {http://mceniry.net/papers/Fast%20Inverse%20Square%20Root.pdf}
 },
 
+@book{kandel_essentials_1995,
+	title = {Essentials of neural science and behavior},
+	isbn = {9780838522455},
+	abstract = {This book introduces undergraduate students to the fundamentals of biology in mental processes.},
+	publisher = {{McGraw-Hill} Professional},
+	author = {Kandel, Eric R. and Schwartz, James Harris and Jessell, Thomas M.},
+	year = {1995},
+	keywords = {Behavior, Medical / Mental Health, Medical / Neurology, Medical / Neuroscience, Nervous System/ physiology, Neurosciences, Psychology / Neuropsychology, Science / Life Sciences / Neuroscience}
+},
+
 @article{stephens_modes_2010,
 	title = {From Modes to Movement in the Behavior of Caenorhabditis elegans},
 	volume = {5},
@@ -3725,6 +3735,18 @@ These results show that the microstructure can be used as a behavioral screen fo
 	note = {{PMID:} 16541064},
 	keywords = {Art, Bacteriophage M13, Biopolymers, {DNA}, {DNA}, {Single-Stranded}, {DNA}, Viral, Microscopy, Atomic Force, Nanostructures, Nanotechnology, Nucleic Acid Conformation},
 	pages = {297--302}
+},
+
+@book{finger_origins_2001,
+	title = {Origins of neuroscience: a history of explorations into brain function},
+	isbn = {9780195146943},
+	shorttitle = {Origins of neuroscience},
+	abstract = {With over 350 illustrations, this impressive volume traces the rich history of ideas about the functioning of the brain from its roots in the ancient cultures of Egypt, Greece, and Rome through the centuries into relatively modern times. In contrast to biographically oriented accounts, this book is unique in its emphasis on the functions of the brain and how they came to be associated with specific brain regions and systems. Among the topics explored are vision, hearing, pain, motor control, sleep, memory, speech, and various other facets of intellect. The emphasis throughout is on presenting material in a very readable way, while describing with scholarly acumen the historical evolution of the field in all its amazing wealth and detail. From the opening introductory chapters to the concluding look at treatments and therapies, this monumental work will captivate readers from cover to cover. It will be valued as both an historical reference and as an exciting tale of scientific discovery. It is bound to attract a wide readership among students and professionals in the neural sciences as well as general readers interested in the history of science and medicine.},
+	publisher = {Oxford University Press},
+	author = {Finger, Stanley},
+	month = sep,
+	year = {2001},
+	keywords = {Brain, Medical / History, Medical / Neurology, Medical / Neuroscience, Neurology, Neurosciences, Psychology / Neuropsychology, Science / Life Sciences / Neuroscience}
 },
 
 @article{xu_multiplexed_2003,
