wrapping up the conclusion

--- a/references.bib
+++ b/references.bib
@@ -972,6 +972,23 @@ For studying the function of specific neurons in their native circuitry, it is d
 	pages = {395--402}
 },
 
+@article{baccus_retinal_2008,
+	title = {A retinal circuit that computes object motion},
+	volume = {28},
+	issn = {1529-2401},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/18596156},
+	doi = {10.1523/JNEUROSCI.4206-07.2008},
+	abstract = {Certain ganglion cells in the retina respond sensitively to differential motion between the receptive field center and surround, as produced by an object moving over the background, but are strongly suppressed by global image motion, as produced by the observer's head or eye movements. We investigated the circuit basis for this object motion sensitive {(OMS)} response by recording intracellularly from all classes of retinal interneurons while simultaneously recording the spiking output of many ganglion cells. Fast, transient bipolar cells respond linearly to motion in the receptive field center. The synaptic output from their terminals is rectified and then pooled by the {OMS} ganglion cell. A type of polyaxonal amacrine cell is driven by motion in the surround, again via pooling of rectified inputs, but from a different set of bipolar cell terminals. By direct intracellular current injection, we found that these polyaxonal amacrine cells selectively suppress the synaptic input of {OMS} ganglion cells. A quantitative model of these circuit elements and their interactions explains how an important visual computation is accomplished by retinal neurons and synapses.},
+	number = {27},
+	journal = {The Journal of Neuroscience: The Official Journal of the Society for Neuroscience},
+	author = {Baccus, Stephen A and Olveczky, Bence P and Manu, Mihai and Meister, Markus},
+	month = jul,
+	year = {2008},
+	note = {{PMID:} 18596156},
+	keywords = {Action Potentials, Amacrine Cells, Ambystoma, Animals, Computer Simulation, Motion Perception, Nerve Net, Neural Inhibition, Neural Pathways, Neurons, Organ Culture Techniques, Retina, Retinal Bipolar Cells, Retinal Ganglion Cells, Synapses, Synaptic Transmission, Visual Pathways},
+	pages = {6807--6817}
+},
+
 @article{landro_role_1994,
 	title = {The role of lysine 166 in the mechanism of mandelate racemase from Pseudomonas putida: mechanistic and crystallographic evidence for stereospecific alkylation by {(R)-alpha-phenylglycidate}},
 	volume = {33},
@@ -1894,6 +1911,15 @@ are driven and organized by proprioceptive coupling},
 	month = dec,
 	year = {2007},
 	pages = {2105--2116}
+},
+
+@misc{hires_gcamp5_2011,
+	title = {{GCaMP5} is out},
+	url = {http://brainwindows.wordpress.com/2011/11/15/gcamp5-is-out/},
+	journal = {Brain Windows: New tools for peering into the brain},
+	author = {Hires, Andrew},
+	month = nov,
+	year = {2011}
 },
 
 @book{kamkin_mechanosensitive_2007,
