--- a/thesis.tex
+++ b/thesis.tex
@@ -4,11 +4,6 @@
 \documentclass{harvard-thesis}
 
 
-
-
-
-
-
 \begin{document}
 
 % the front matter
@@ -28,7 +23,7 @@
 %\include{chapters/mating}
 \include{chapters/barcode}
 \include{chapters/barcodeAnalysis}
-%\include{chapters/conclusion}
+\include{chapters/conclusion}
 
 
 % the back matter
