--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -60,4 +60,5 @@ Franziska Graf.
 
 Some nematode strains used in this work were provided by the Caenorhabditis Genetics Center, which is funded by the NIH National Center for Research Resources (NCRR).
 
-Typeset with \XeTeX using a modified version of Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
+Typeset with \XeTeX. Template based on Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
+The source code for the text of this dissertation is available at \url{http://github.com/aleifer/dissertation}.
