adding conclusion. still in progress

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,8 +1,27 @@
 % the acknowledgments section
 
-This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks first and foremost to my advisor Aravinthan Samuel. Aravi took me into his laboratory as a refugee from another lab. I could not have asked for a more supportive advisor. 
+This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks goes first and foremost to my advisor, Professor Aravinthan Samuel, who graciously took me into his lab and steadfastly supported me through his thoughtful guidance and mentorship. 
 
-Aravi provided me intellectual freedom and wonderful environment to explore and build.
+
+and through his thoughtful guidance and mentorship, has directed 
+pointed me along in the right direction
+I could not have asked for a better training
+
+looked out for me and gave me insights 
+Who gave me 
+and g
+
+and who has been a steadfast mentor and encouraging. 
+
+
+and has served as an inspiring mentor. 
+
+supported me and mentored me throughout my graduate career. 
+
+Aravi provided me with the intellectual freedom and encouragement to  environment to explore and build.
+
+
+Aravi took me into his laboratory as a refugee from another lab. I could not have asked for a more supportive advisor. 
 
 Taught me the importance of being a respectful and humble colleague and collaborator. 
 
@@ -11,52 +30,54 @@ Mark Leifer, Camille Rickets helped with editing.
 
 
 Thanks to my parents Anne and Mark for their encouragmenet. To Professor Jim Hogle and Michele Jakoulov of the Program in Biophysics at Harvard. 
+frac
 
-This dissertation is based upon work supported by the National Science Foundation Graduate Research Fellowship under Grant No. DGE-0644491.
-
-Biophysics:
-  Jim Hogle
-  Michele Jakoulov
-
-Advisor:
-  Aravi Samuel
-
-Family:
-  Mark and Anne
-
-Samuel Lab:
-  Marc Gershow
-  Mason Klein
-  Quan Wen
-  Liz Kane and others
-
-Chris Fang Yen
-
-Collaborators:
-   Chris Clark, Mark Alkema
-   Adam Bahrami, Michael Hendriks in Yun Zhang lab
-   Ed Boyden
-
-Chenxiang, William Shih.
-   
-
-Markus Meister who initiall introduced me to neuroscience. 
-Ashley Carter and Tom Perkins for mentoring me and introducing me to academic research. 
-
-Ben Schwarts and Alex Fields for many fruitful discussions.
-
-Dissertation Advisary Committee Members:
-   Adam Cohen
-   Ed Boyden
-   Mark Alkema
-   Markus Meister
-   
-Thesis Committee:
-	Markus Meister
-	Yun Zhang
-	Florian Engert
-
-Franziska Graf.
+This dissertation is based upon work supported by the National Science Foundation 
+Graduate Research Fellowship under Grant No. DGE-0644491.
+%
+%Biophysics:
+%  Jim Hogle
+%  Michele Jakoulov
+%
+%Advisor:
+%  Aravi Samuel
+%
+%Family:
+%  Mark and Anne
+%
+%Samuel Lab:
+%  Marc Gershow
+%  Mason Klein
+%  Quan Wen
+%  Liz Kane and others
+%
+%Chris Fang Yen
+%
+%Collaborators:
+%   Chris Clark, Mark Alkema
+%   Adam Bahrami, Michael Hendriks in Yun Zhang lab
+%   Ed Boyden
+%
+%Chenxiang, William Shih.
+%   
+%
+%Markus Meister who initiall introduced me to neuroscience. 
+%Ashley Carter and Tom Perkins for mentoring me and introducing me to academic research. 
+%
+%Ben Schwarts and Alex Fields for many fruitful discussions.
+%
+%Dissertation Advisary Committee Members:
+%   Adam Cohen
+%   Ed Boyden
+%   Mark Alkema
+%   Markus Meister
+%   
+%Thesis Committee:
+%	Markus Meister
+%	Yun Zhang
+%	Florian Engert
+%
+%Franziska Graf.
 
 Some nematode strains used in this work were provided by the Caenorhabditis Genetics Center, which is funded by the NIH National Center for Research Resources (NCRR).
 
