reorganized and prepared for camille to copy edit (stil missing omega turn chapter, abstract and acknowledgements)

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,6 +1,13 @@
+%!TEX root = /Users/andy/Documents/Academics/Dissertation/thesis.tex
 % the acknowledgments section
+Acknowladgements go here.
 
-This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks goes first and foremost to my advisor, Professor Aravinthan Samuel, who graciously took me into his lab and steadfastly supported me through his thoughtful guidance and mentorship. 
+\begin{comment}
+This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks goes first and foremost to my advisor, Professor Aravinthan Samuel, who graciously took me into his lab and steadfastly supported me with deft  guidance and thoughtful mentorship. Aravi has taught me much about  the craft pf science  and I hope to emulate the integrity and earnestness with which he brings to the field.
+
+Aravi has taught me much about how to conduct science with integrity and earnestness
+
+Aravi approaches science with an integrity and earenestness
 
 
 and through his thoughtful guidance and mentorship, has directed 
@@ -81,5 +88,6 @@ Graduate Research Fellowship under Grant No. DGE-0644491.
 
 Some nematode strains used in this work were provided by the Caenorhabditis Genetics Center, which is funded by the NIH National Center for Research Resources (NCRR).
 
+\end{comment}
 Typeset with \XeTeX. Template based on Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
 The source code for the text of this dissertation is available at \url{http://github.com/aleifer/dissertation}.
