wrote acknowledgements. still need to do spell/name checking
edited acknowledgements

minor touch ups. added jeff stirma

--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,93 +1,50 @@
 %!TEX root = /Users/andy/Documents/Academics/Dissertation/thesis.tex
 % the acknowledgments section
-Acknowladgements go here.
 
-\begin{comment}
-This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks goes first and foremost to my advisor, Professor Aravinthan Samuel, who graciously took me into his lab and steadfastly supported me with deft  guidance and thoughtful mentorship. Aravi has taught me much about  the craft pf science  and I hope to emulate the integrity and earnestness with which he brings to the field.
-
-Aravi has taught me much about how to conduct science with integrity and earnestness
-
-Aravi approaches science with an integrity and earenestness
+This thesis would not have been possible without the support of many individuals throughout my graduate studies. Thanks goes first and foremost to my advisor, Professor Aravinthan Samuel, who graciously took me into his lab and supported me with deft  guidance and thoughtful mentorship. Aravi conducts science with an integrity and earnestness that I very much admire and it has been a privilege to learn from his example.
 
 
-and through his thoughtful guidance and mentorship, has directed 
-pointed me along in the right direction
-I could not have asked for a better training
+The Samuel lab is inherently collaborative and the work here has benefited from many others within the lab. I  thank Christopher Fang-Yen for introducing me to optogenetics and for getting me started on such an exciting project. Its been a privilege to work with Quan Wen who has an incredible knack for insightful experiments. I've learned much from his lead. Marc Gershow never fails to enliven the lab and I am indebted to him for many great brainstorming sessions and for teaching me how to manage very large software projects. I have enjoyed working with Mason Klein on microscopy and optics projects.  I also thank Linjou (Sp!!?) for showing me the ropes and thank Elizabeth Kane for critical graduate student solidarity.
 
-looked out for me and gave me insights 
-Who gave me 
-and g
+I worked with the following undergraduates: Anji Tang, Laura Freeman and Konlin Shen. I thank them for their excellent work, patience and dedication. Sway Chen in particular helped conduct many of the experiments in Chapter \ref{chapter:proprioceptive}.
 
-and who has been a steadfast mentor and encouraging. 
+This work was done collaboratively with others at Harvard and beyond. Specific contributions to each chapter are listed in the sections marked ``Manuscript Information.'' In particular, thanks goes to Mark Alkema and Christopher Clark of the Alkema Lab at UMass Worcester. Mark provided guidance and mentorship and helped design the locomotion experiments. Chris Clark and I worked closely together on the study of the omega turns. He made many of the strains used here and I greatly appreciate his companionship during many hours of data collection.
 
+The Samuel lab benefits from its close proximity to the Zhang lab upstairs. I have learned greatly from Yun Zhang, Adam Bahrami and Michael Hendriks.
 
-and has served as an inspiring mentor. 
+The DNA origami work was conducted in collaboration with William Shih and spearheaded by Chenxiang Lin of the Shih lab.  It has been a pleasure to work with Chenxiang, and I thank William in particular for allowing me to rotate in his lab. I also had the unique opportunity to collaborate with my father, Mark Leifer, on the mathematical theory behind the DNA barcode detection software, which was an especially fun and rewarding experience.
 
-supported me and mentored me throughout my graduate career. 
+Thanks to the following members of the worm community for sharing advice and reagents: Massimo Hilliard,  Brent Neumann, Mei Zhen  and Nials Ringstad [SPELL CHECK!]. Thanks to
+Ed Boyden and Brian Chow of the Boyden lab who took the time to meet with me early on to discuss optogenetics. Thanks to Jeffrey Stirman for open, friendly and collegial competition. 
+ 
+I arrived at \textit{C. elegans} neuorscience research through a circuitous route. I owe thanks to Marcus Meister who first sparked my interest in neuroscience during a seminar lecture and then allowed me to rotate in his lab. L Mahadavan and William Ryu first introduced me to the existence of \textit{C. elegans} during a final project in Maha's class. Through them, I eventually  found my way to the Samuel lab. 
 
-Aravi provided me with the intellectual freedom and encouragement to  environment to explore and build.
-
-
-Aravi took me into his laboratory as a refugee from another lab. I could not have asked for a more supportive advisor. 
-
-Taught me the importance of being a respectful and humble colleague and collaborator. 
+Prior to Harvard, certain individuals inspired me to go to graduate school. Tom Perkins and Ashley Carter of JILA at NIST CU-Boulder gave me my first foray into  academic research, and both have been invaluable resources ever since. At critical junctures the following provided crucial encouragement when I needed it: Sidney Drell, Mark Kasevich, Benn Tannenbaum, Rick Pam and Naveen Sinha.
 
 
-Mark Leifer, Camille Rickets helped with editing. 
+To Michele Jakoulov and Jim Hogle, thank you for making the Biophysics program such a supportive home. Thanks to my friends and members of my cohort: Dan Chonde, Nate Derr, Ashley Gibbs, Bryan Harada, Alison Hill, Xavier Rios, Peter Stark  and Kevin Takasaki [ANDY SPELLCHECK]. In particular, thanks go to fellow biophysics students Benjamin Schwartz and Alex Fields for being gifted teachers and steadfast friends.
 
 
-Thanks to my parents Anne and Mark for their encouragmenet. To Professor Jim Hogle and Michele Jakoulov of the Program in Biophysics at Harvard. 
-frac
 
-This dissertation is based upon work supported by the National Science Foundation 
+Thanks to my dissertation Advisory Committee: Adam Cohen, Ed Boyden, Mark Alkema and Markus Meister; and to my Thesis Committee: Markus Meister, Yun Zhang and Florian Engert.
+
+This thesis is dedicted to the brilliant scientist and engineer Ethan Townsend.
+No person has done more to  teach me to appreciate the friendship of others.
+
+I am fortunate to have the unwavering support of my loving parents Anne and Mark Leifer. I thank them for all of the time they have spent counseling and encouraging me and for instilling in me a deep-seated value in academics and education at an early age. I also thank my brother Daniel Leifer for being a close friend. I am a product of my family and I love them very much.
+
+Finally, I want to thank Franziska Graf. She is a brilliant scientist, caring friend and dedicated partner. I love her dearly and this entire process has been much better with her by my side.
+
+
+
+I received financial support from the National Science Foundation 
 Graduate Research Fellowship under Grant No. DGE-0644491.
-%
-%Biophysics:
-%  Jim Hogle
-%  Michele Jakoulov
-%
-%Advisor:
-%  Aravi Samuel
-%
-%Family:
-%  Mark and Anne
-%
-%Samuel Lab:
-%  Marc Gershow
-%  Mason Klein
-%  Quan Wen
-%  Liz Kane and others
-%
-%Chris Fang Yen
-%
-%Collaborators:
-%   Chris Clark, Mark Alkema
-%   Adam Bahrami, Michael Hendriks in Yun Zhang lab
-%   Ed Boyden
-%
-%Chenxiang, William Shih.
-%   
-%
-%Markus Meister who initiall introduced me to neuroscience. 
-%Ashley Carter and Tom Perkins for mentoring me and introducing me to academic research. 
-%
-%Ben Schwarts and Alex Fields for many fruitful discussions.
-%
-%Dissertation Advisary Committee Members:
-%   Adam Cohen
-%   Ed Boyden
-%   Mark Alkema
-%   Markus Meister
-%   
-%Thesis Committee:
-%	Markus Meister
-%	Yun Zhang
-%	Florian Engert
-%
-%Franziska Graf.
 
 Some nematode strains used in this work were provided by the Caenorhabditis Genetics Center, which is funded by the NIH National Center for Research Resources (NCRR).
 
-\end{comment}
-Typeset with \XeTeX. Template based on Jordan Suchow's open source template, available at \href{https://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}{http://github.com/aleifer}.
-The source code for the text of this dissertation is available at \url{http://github.com/aleifer/dissertation}.
+Text is typeset in \XeTeX ~using a modified version of Jordan Suchow's template, \url{http://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}.
+
+The source code for the dissertation is available at \url{http://github.com/aleifer/dissertation}.
+
+
+
