--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -42,7 +42,7 @@ Graduate Research Fellowship under Grant No. DGE-0644491.
 
 Some nematode strains used in this work were provided by the Caenorhabditis Genetics Center, which is funded by the NIH National Center for Research Resources (NCRR).
 
-Text is typeset in \XeTeX ~using a modified version of Jordan Suchow's template, \url{http://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}.
+Mark Leifer helped with editing. Text is typeset in \XeTeX ~using a modified version of Jordan Suchow's template, \url{http://github.com/aleifer/LaTeX-template-for-Harvard-dissertation}.
 
 The source code for the dissertation is available at \url{http://github.com/aleifer/dissertation}.
 
